# latex-research-toolkit

./: .gitignore  README.md  arxiv_metadata.txt  pyproject.toml  requirements.txt
.cursor/rules/: README.md  editor.mdc  expert.mdc  researcher.mdc  reviewer.mdc  writer.mdc
code/: render_all_tex.py
docs/: AI_CONTEXT.md  CONTRIBUTING.md  RESEARCH_PAPER_CHECKLIST.md  TASKS.md
latex/: macros.tex  main.tex  references.bib
latex/drafts/: unused_content.tex
latex/sections/: introduction.tex  methodology.tex
references/: README.md
tools/: __init__.py  compile.py  pdt_to_md.py  prepare_submission.py
